2007-07-19  Sancho Lerena  <slerena@artica.es>

	* bin/pandora_DBI_test.pl: This is in /util and shound not be there.

	* pandora_network.pl: Added concurrency locking for ICMP and
	removed previos method (repeating tests). This sould work fine and
	faster. ICMP Latency added as independent function. This sould go
	on a new library for 1.4 or 2.0 version. Removed some debug
	commented code.

2007-07-18  Sancho Lerena  <slerena@artica.es>

	* pandora_network.pl: BugFix: SNMP calls that was causing segfauls was
 	because NetSNMP (SNMP) library is not thread safe !. Simple locking
	mechanism was enough to run code safely !. Main SQL sentence fixed,
	removed some debug code. 

	* pandora_server.conf: added sample of network_thread token

2007-07-17  Sancho Lerena  <slerena@artica.es>

	* PandoraFMS/DB.pm: Added generic access to database using
	give_db_value() function.

	* pandora_network.pl: Porting code from 2.0 trunk, code from 1.3 was
	too slow. Solved many issues of stability. Changed entire balancing
	and task assigment algorithm. 

	* PandoraFMS/Config.pm: Added network_thread config option to
	fine-tune network server.

2007-07-16  Sancho Lerena  <slerena@artica.es>

	* bin/PandoraFMS/DB.pm: bugfix, was not updating running_by field !!

2007-07-13  Sancho Lerena  <slerena@artica.es>

	* bin/pandora_recon.pl: Another patch, to create records in
	tagente_estado using different values for "estado" field, (100 for
	non-monitors, 0 for monitors), in the same way console does.
	
	* bin/pandora_recon.pl: Testing changes for two items: (a) Bug
	detected in forking startup (-D). (b) Bug detected due creation of
	modules without inserting record in tagente_estado table.
	
	* bin/pandora_server.pl: Updated some flags (IO flush), and
	indenting some code.

2007-07-11  Manuel Arostegui <marostegui@artica.es>

        * bin/pandora_server.pl: Fixed a bug which make
          impossible to figure out what the error was