@@ -6,7 +6,7 @@
 # if not given, it takes localhost. It's preferable to setup one
 # because machine name could change by some reason.
 
-servername ulises
+servername endor
 
 # incomingdir:  Defines directory where incoming data packets are stored
 # You could set directory relative to base path or absolute, starting with /
@@ -16,20 +16,21 @@ incomingdir /var/spool/pandora/data_in
 # log_file: Main logfile for pandora_server
 # You could set file relative to base path or absolute, starting with /
 
-log_file /var/log/pandora/pandora_server.log
+log_file /var/log/pandora_server.log
 
 # Error logfile: aux logfile for pandora_server errors (in Daemon mode)
 # You could set file relative to base path or absolute, starting with /
 
-errorlog_file /var/log/pandora/pandora_server.error
+errorlog_file /var/log/pandora_server.error
 
 # dbname: Database name (pandora by default
 
-dbname pandora
+dbname pandora13
 
 # dbuser:  Database user name (pandora by default)
 
 dbuser pandora
+
 # daemon: Runs in daemon mode (background) if 1, if 0 runs in foreground 
 # this could be setup on command line with -D option
 
@@ -37,7 +38,7 @@ dbuser pandora
 
 # dbpass: Database password
 
-dbpass zhriopul
+dbpass pandora
 
 # dbhost: Database hostname or IP address
 
@@ -46,7 +47,7 @@ dbhost localhost
 # verbosity: level of detail on errors/messages (0 default, 1 verbose, 2 debug.... 10 noisy)
 # -v in command line (verbose) or -d (debug)
 
-verbosity 0
+verbosity 1
 
 # Alert threshold
 
@@ -79,16 +80,15 @@ reconserver 1
 
 # Network timeout (in seconds) for timeout in network connections for Network agents
 
-network_timeout 2
+network_timeout 3
 
 # Server keepalive (in seconds)
 
-server_keepalive 60
+server_keepalive 50
 
 # Server Threshold: defines number of seconds of main loop (in sec)
 
-server_threshold 30
-
-# Network threads for processing pararel tasks ( 5 for low-end systems (<2000 bogomips), 10-15 for high-end systems)
+server_threshold 15
 
 network_threads 5
+
